prevent content jumping

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,6 +6,7 @@
 
 .background-photo {
   width: 100%;
+  min-height: 60vw;
   margin-bottom: -20vw;
   position: relative;
   z-index: -1;
